# virtual-stores

./: .deepsource.toml  .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  docker-compose.local.yaml  docker-compose.yaml  env.example  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  test.yml
api/: manage.py
api/accounts/: admin.py  enums.py  forms.py  managers.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  tests.py  views.py
api/accounts/migrations/: 0001_initial.py  0002_auto_20200518_1801.py  0003_auto_20200521_1140.py  0004_auto_20200522_1718.py
api/config/: api_v1_urls.py  asgi.py  celery.py  urls.py  wsgi.py
api/products/: admin.py  enum.py  models.py  serializers.py  signals.py  tasks.py  tests.py  views.py
api/products/migrations/: 0001_initial.py  0002_auto_20200521_1322.py
api/settings/: base.py  build.py  heroku.py  local.py  log.py  prod.py  rest_framework.py  sentry.py  test.py
api/shared/: exceptions.py  factories.py  fields.py  helpers.py  middlewares.py  models.py  paging.py  permissions.py  schema.py  serializers.py  session.py  tasks.py  tests.py  utils.py  views.py
api/stores/: models.py  permissions.py  serializers.py  tests.py  views.py
api/stores/migrations/: 0001_initial.py  0002_store_deactivate_date.py  0003_auto_20200517_0741.py  0004_auto_20200521_1310.py  0005_auto_20200525_1719.py  0006_store_category.py  (+1 more)
api/users/: admin.py  forms.py  models.py  serializers.py  views.py
scripts/: deploy.sh  generate_data.py  run_server.sh  run_tests.sh  setup.py  wait_db.py
(+4 files in other folders)
