[tool.poetry]
name = "Store"
version = "1.0.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8, <3.9"
django = "^3.0.6"
gunicorn = "^20.0.4"
djangorestframework = "^3.11.0"
django-filter = "^2.2.0"
drf-yasg = "^1.17.1"
djangorestframework-camel-case = "^1.1.2"
django_celery_beat = "^2.0.0"
djangorestframework-simplejwt = "^4.4.0"
psycopg2-binary = "^2.8.5"
Pillow = "^7.1.2"
flower = "^0.9.4"
sentry-sdk = "^0.14.3"
djoser = "^2.0.3"
redis = "^3.5.1"
python-dotenv = "^0.13.0"
drf-nested-serializer = "^0.1.0"
dj_database_url = "^0.5.0"
whitenoise = "^5.0.1"
django-versatileimagefield = "^2.0"
celery_once = "^3.0.1"
django-cors-headers = "^3.2.1"
python-magic = "^0.4.18"

[tool.poetry.dev-dependencies]
factory-boy = "^2.12.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
